@@ -24,7 +24,12 @@
    Boston, MA 02110-1301, USA.
 */
 
+#ifndef __COREFOUNDATION_CFRUNLOOP_H__
+#define __COREFOUNDATION_CFRUNLOOP_H__
+
 typedef struct __CFRunLoopSource * CFRunLoopSourceRef;
 
-typedef struct CFRunLoop *CFRunLoopRef;
+typedef struct __CFRunLoop *CFRunLoopRef;
+
+#endif /* __COREFOUNDATION_CFRUNLOOP_H__ */
 
