@@ -45,10 +45,10 @@
 #include <CoreFoundation/CFLocale.h>
 #include <CoreFoundation/CFNumber.h>
 #include <CoreFoundation/CFNumberFormatter.h>
-/* #include <CoreFoundation/CFPropertyList.h> */
+#include <CoreFoundation/CFPropertyList.h>
 #include <CoreFoundation/CFRunLoop.h>
 #include <CoreFoundation/CFSet.h>
-/* #include <CoreFoundation/CFStream.h> */
+#include <CoreFoundation/CFStream.h>
 #include <CoreFoundation/CFString.h>
 #include <CoreFoundation/CFStringEncodingExt.h>
 #include <CoreFoundation/CFTimeZone.h>
