@@ -65,9 +65,11 @@ libgnustep-corebase_HEADER_FILES = \
   CFLocale.h \
   CFNumber.h \
   CFNumberFormatter.h \
+  CFPropertyList.h \
   CFRunLoop.h \
   CFRuntime.h \
   CFSet.h \
+  CFStream.h \
   CFString.h \
   CFStringEncodingExt.h \
   CFTimeZone.h \
